src/nanovg/api.zig

pub const NVG_TEXTURE_ALPHA: c_int = 1;
pub const NVG_TEXTURE_RGBA: c_int = 2;
pub const enum_NVGtexture = c_uint;
pub const struct_NVGscissor = extern struct {
    xform: [6]f32,
    extent: [2]f32,
};
pub const NVGscissor = struct_NVGscissor;
pub const struct_NVGvertex = extern struct {
    x: f32,
    y: f32,
    u: f32,
    v: f32,
};
pub const NVGvertex = struct_NVGvertex;
pub const struct_NVGpath = extern struct {
    first: c_int,
    count: c_int,
    closed: u8,
    nbevel: c_int,
    fill: [*c]NVGvertex,
    nfill: c_int,
    stroke: [*c]NVGvertex,
    nstroke: c_int,
    winding: c_int,
    convex: c_int,
};
pub const NVGpath = struct_NVGpath;
pub const struct_NVGparams = extern struct {
    userPtr: ?*c_void,
    edgeAntiAlias: c_int,
    renderCreate: ?fn (?*c_void) callconv(.C) c_int,
    renderCreateTexture: ?fn (?*c_void, c_int, c_int, c_int, c_int, [*c]const u8) callconv(.C) c_int,
    renderDeleteTexture: ?fn (?*c_void, c_int) callconv(.C) c_int,
    renderUpdateTexture: ?fn (?*c_void, c_int, c_int, c_int, c_int, c_int, [*c]const u8) callconv(.C) c_int,
    renderGetTextureSize: ?fn (?*c_void, c_int, [*c]c_int, [*c]c_int) callconv(.C) c_int,
    renderViewport: ?fn (?*c_void, f32, f32, f32) callconv(.C) void,
    renderCancel: ?fn (?*c_void) callconv(.C) void,
    renderFlush: ?fn (?*c_void) callconv(.C) void,
    renderFill: ?fn (?*c_void, [*c]NVGpaint, NVGcompositeOperationState, [*c]NVGscissor, f32, [*c]const f32, [*c]const NVGpath, c_int) callconv(.C) void,
    renderStroke: ?fn (?*c_void, [*c]NVGpaint, NVGcompositeOperationState, [*c]NVGscissor, f32, f32, [*c]const NVGpath, c_int) callconv(.C) void,
    renderTriangles: ?fn (?*c_void, [*c]NVGpaint, NVGcompositeOperationState, [*c]NVGscissor, [*c]const NVGvertex, c_int, f32) callconv(.C) void,
    renderDelete: ?fn (?*c_void) callconv(.C) void,
};
pub const NVGparams = struct_NVGparams;

extern fn nvgCreateInternal(params: [*c]NVGparams) ?*NVGcontext;
pub fn createInternal(params: [*c]NVGparams) ?*NVGcontext {
    return nvgCreateInternal(params);
}

extern fn nvgDeleteInternal(ctx: ?*NVGcontext) void;
pub fn deleteInternal(ctx: ?*NVGcontext) void {
    return nvgDeleteInternal(ctx);
}

extern fn nvgInternalParams(ctx: ?*NVGcontext) [*c]NVGparams;
pub fn internalParams(ctx: ?*NVGcontext) [*c]NVGparams {
    return nvgInternalParams(ctx);
}

extern fn nvgDebugDumpPathCache(ctx: ?*NVGcontext) void;
pub fn debugDumpPathCache(ctx: ?*NVGcontext) void {
    return nvgDebugDumpPathCache(ctx);
}
